--- a/src/app/pages/cursos/cursos/cursos.component.html
+++ b/src/app/pages/cursos/cursos/cursos.component.html
@@ -6,7 +6,7 @@
         <div class="overlay-call-to-action"></div>
         <h3 class="heading-style-3">Cursos</h3>
     </section>
-    <div class="woocommerce-top-control wrapper">
+    <!-- <div class="woocommerce-top-control wrapper">
         <section class="boxed-sm">
             <div class="container">
                 <div class="row">
@@ -26,7 +26,7 @@
                 </div>
             </div>
         </section>
-    </div>
+    </div> -->
     <section class="box-sm">
         <div class="container">
             <div class="row main">
@@ -34,17 +34,16 @@
                     <figure class="item" *ngFor="let curso of cursos |  paginate: { itemsPerPage: count, currentPage: p }">
                         <div class="product product-style-1">
                             <div class="img-wrapper">
-                                <a [routerLink]="['/curso/', curso._id]">
+                                <a [routerLink]="['../curso/', curso._id]">
                                     <img class="img-responsive" [src]="curso.img | imagenPipe: 'cursos'" alt="{{curso.titulo}} thumbnail" />
-                                    <!-- <img class="img-responsive" src="{{imagenSerUrl}}/cursos/{{curso.img}}" alt="{{curso.titulo}} thumbnail" /> -->
                                 </a>
-                                <div class="product-control-wrapper bottom-right">
-                                    <!-- <div class="wrapper-control-item">
+                                <!-- <div class="product-control-wrapper bottom-right">
+                                    <div class="wrapper-control-item">
                                       <a class="js-quick-view" data-toggle="modal" [attr.data-target]="'#' + producto._id">
                                           <a class="js-quick-view" href="#" type="button" data-toggle="modal" data-target="#quick-view-product">
                                           <span class="lnr lnr-eye"></span>
                                       </a>
-                                  </div> -->
+                                  </div>
                                     <div class="wrapper-control-item item-wish-list">
                                         <a class="js-wish-list js-notify-add-wish-list" href="#">
                                             <span class="lnr lnr-heart"></span>
@@ -55,14 +54,14 @@
                                             <span class="lnr lnr-cart"></span>
                                         </a>
                                     </div>
-                                </div>
+                                </div> -->
                             </div>
                             <figcaption class="desc text-center">
                                 <h3>
-                                    <a class="product-name" [routerLink]="['/curso/', curso._id]">{{curso.titulo}}</a>
+                                    <a class="product-name" [routerLink]="['../curso/', curso._id]">{{curso.titulo}}</a>
                                 </h3>
                                 <span class="price">${{curso.precio_ahora}}</span><br>
-                                <span class="price">${{curso.precio_antes}}</span>
+                                <span class="price precioantes">${{curso.precio_antes}}</span>
                             </figcaption>
                         </div>
                     </figure>
