--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,5 +2,6 @@
 <app-slidertop></app-slidertop>
 <app-page-featured></app-page-featured>
 <app-products-featured></app-products-featured>
+<app-promocion></app-promocion>
 <app-blog-featured></app-blog-featured>
 <app-footer></app-footer>
