--- a/src/app/pages/myaccount/myaccount.component.html
+++ b/src/app/pages/myaccount/myaccount.component.html
@@ -16,6 +16,11 @@
                 <div class="col-md-8">
                     <h1>Bienvenid@</h1>
                     <h2>{{usuario.first_name}} {{usuario.last_name}}</h2>
+                    <br>
+                    <h1>Gracias por Registrarte</h1>
+                    <p>Antes de continuar la compra, favor configurar datos de envio y registro </p>
+
+
 
                 </div>
             </div>
