--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,9 +4,9 @@
     <section class="boxed-sm">
         <div class="container">
             <div class="login-wrapper">
-                <div class="row">
-                    <h3>Log In</h3>
-
+                <div class="login">
+                    <h3>Log In</h3><br>
+                    <div class="clear"></div>
                     <form class="form-horizontal form-material" id="loginform" [formGroup]="loginForm" (ngSubmit)="login()" autocapitalize="off">
                         <div class="form-group organic-form-2 m-t-40">
                             <div class="col-xs-12">
@@ -24,7 +24,7 @@
                                     <input id="checkbox-signup" formControlName="remember" type="checkbox" class="filled-in chk-col-light-blue">
                                     <label for="checkbox-signup"> Remember me </label>
                                 </div>
-                                <a href="javascript:void(0)" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Forgot password?</a> </div>
+                                <a routerLink="/recovery-password" id="to-recover" class="text-dark pull-right"><i class="fa fa-lock m-r-5"></i> Forgot password?</a> </div>
                         </div>
                         <div class="form-group organic-form-2 text-center m-t-20">
                             <div class="col-xs-12">
@@ -38,11 +38,11 @@
                         </div>
                         <div class="form-group organic-form-2 m-b-0">
                             <div class="col-sm-12 text-center">
-                                Don't have an account? <a routerLink="/app/registro" class="text-primary m-l-5"><b>Sign Up</b></a>
+                                Don't have an account? <a routerLink="/registro" class="text-primary m-l-5"><b>Sign Up</b></a>
                             </div>
                         </div>
                     </form>
-                    <form class="form-horizontal" id="recoverform" action="index.html">
+                    <!-- <form class="form-horizontal" id="recoverform" >
                         <div class="form-group organic-form-2">
                             <div class="col-xs-12">
                                 <h3>Recover Password</h3>
@@ -59,7 +59,7 @@
                                 <button class="btn btn-primary btn-lg btn-block text-uppercase waves-effect waves-light" type="submit">Reset</button>
                             </div>
                         </div>
-                    </form>
+                    </form> -->
 
                 </div>
             </div>
